# RoadTo500

./: README.md  app.py  database_manager.py  pyproject.toml
Data_ETL/: cdb.db  data_uploader.py
Data_ETL/Data/: StrongLifts20221108.csv
Models/: orm.py
templates/: hero.html  index.html  splash.html
